build/resources/test/errors/P2/public/call02.mavl
function void main(){
    foo();
}

function void foo(){
    bar();
}

function void baz(){

}
